cluster/infra/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exercises
---
apiVersion: v1
kind: Namespace
metadata:
  name: project
